--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
-
 {
-	"presets": ["es2015", "react"],
-	"plugins": [
-	  "syntax-class-properties",
-	  "transform-class-properties"
+	"plugins": ["@babel/plugin-proposal-class-properties"],
+	"presets": [
+	  "@babel/preset-react",
+	  [
+		"@babel/preset-env",
+		{
+		  "targets": {
+			"edge": "14"
+		  },
+		  "modules": "commonjs"
+		}
+	  ]
 	]
   }
