--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-inline-svg",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Sanity.io studio plugin to upload and display SVG files inline.",
   "main": "lib/svgUpload.js",
   "scripts": {
@@ -37,6 +37,8 @@
     "babel-plugin-syntax-class-properties": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-sanitized-html": "^2.0.0",
+    "sanitize-html": "^1.20.1"
   }
 }
